# AI_HW

./: CMakeLists.txt  README  README2
hw1/: .GameState.cpp.swp  .GameState.h.swp  .Move.cpp.swp  .Node.cpp.swp  .gameState.cpp.swp  .gameState.h.swp  .main.cpp.swo  .main.cpp.swp  .output-part2.txt.swo  .output-part2.txt.swp  GameState.cpp  GameState.h  Move.cpp  Move.h  Node.cpp  Node.h  README  a.out  backTrack-test2.txt  gameState.cpp  gameState.h  main.cpp  makefile  output-part2.txt
hw1/HW1/__MACOSX/: ._HW1
hw1/HW1/__MACOSX/HW1/: ._SBP-level0-solved.txt  ._SBP-level0.txt  ._SBP-level1.txt  ._SBP-level2.txt  ._SBP-level3.txt  ._SBP-test-not-normalized.txt
hw1/Puzzles/: backTrack-test.txt
hw2/: BasketGame.cpp  BasketGame.h  Move.cpp  Move.h  a.out  main.cpp
